# RacunarskaGrafikaRA45-2021

./: README.md
Kostur/: Kostur.vcxproj  Kostur.vcxproj.filters  app  build.sh  packages.config
Kostur/Header/: Globals.h  RenderUtils.h  Shader.h  Util.h
Kostur/Source/: Globals.cpp  Main.cpp  RenderUtils.cpp  Shader.cpp  Util.cpp
Kostur/shaders/: basic.fs  basic.vs
Kostur3D/: CMakeLists.txt  Kostur.sln  Sablon.vcxproj  Sablon.vcxproj.filters  Util.cpp  Util.h  basic.frag  basic.vert  build.sh  main.cpp  packages.config
Kostur3D/Header/: Camera.h  Globals.h  MeshBuilders.h  Renderer.h
Kostur3D/Source/: Camera.cpp  Globals.cpp  MeshBuilders.cpp  Renderer.cpp  Util.cpp  tiny_obj_loader.cpp
Kostur3D/res/remote/: ac_remote__free.mtl
